<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">cSharing</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_msg">MsgActivity</string>
    <string name="title_activity_file_sharing">FileSharingActivity</string>
    <string name="empty">Empty</string>
    <string name="createButton">create</string>
    <string name="title_activity_file_chooser">FileChooser</string>
    <string name="title_activity_private_chat">PrivateChatActivity</string>
    <string name="title_activity_client_select">ClientSelectActivity</string>
    <string name="appName">cSharing</string>
    <string name="userName">User Name</string>
    <string name="startServer">start Server</string>
    <string name="connectClient">connect Client</string>
    <string name="share">share</string>
    <string name="send">Send</string>
    <string name="selectFile">select File</string>

</resources>
