<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1"
    android:columnCount="1"
    android:useDefaultMargins="false"
    android:rowCount="14"
    android:background="#1c2125"
    android:fontFamily="sans-serif-condensed"
    android:alignmentMode="alignBounds"
    android:padding="0dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/appName"
        android:textColor="#f6f4ff"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.78" />

    <TextView
        android:layout_width="83dp"
        android:layout_height="34dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/userName"
        android:textColor="#f6f4ff"
        android:id="@+id/usrName"
        android:layout_gravity="center_horizontal" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_gravity="center_horizontal"
        android:rowCount="1"
        android:columnCount="2"
        android:id="@+id/serverClient"
        android:orientation="horizontal">

        <Button
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:text="@string/startServer"
            android:id="@+id/buttonstartServer"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            style="?android:textAppearanceSmall"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:background="@drawable/btn_live_dark"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#000"/>

        <Button
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:text="@string/connectClient"
            android:id="@+id/buttonconnectClient"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            style="?android:textAppearanceSmall"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:background="@drawable/btn_live_dark"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#000"/>
    </GridLayout>

    <TextView
        android:id="@+id/infoport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textColor="#f6f4ff"/>

    <TextView
        android:id="@+id/infoip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textColor="#f6f4ff"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="182dp"
        android:id="@+id/listView"
        android:textColor="#f6f4ff"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:textColor="#f6f4ff"
        android:inputType="text" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:rowCount="2"
        android:columnCount="2"
        android:id="@+id/gridone">

        <Button
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:id="@+id/buttonshare"
            android:layout_gravity="center"
            android:layout_row="0"
            android:layout_column="0"
            style="?android:textAppearanceSmall"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:background="@drawable/btn_live_dark"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#000"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/buttonSend"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:background="@drawable/btn_live_dark"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#000"/>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:rowCount="1"
        android:id="@+id/selectGrid"
        android:columnCount="2">

        <EditText
            android:layout_width="161dp"
            android:layout_height="match_parent"
            android:id="@+id/editText"
            android:layout_row="0"
            android:layout_column="0"
            android:textColor="#f6f4ff"
            android:inputType="text" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:text="@string/selectFile"
            android:id="@+id/buttonSelect"
            android:layout_gravity="center_horizontal"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:background="@drawable/btn_live_dark"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#000"/>
    </GridLayout>

</LinearLayout>
